corriger le bug de pdf

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Chemin vers le dossier contenant les fichiers C
-BASE_DIR=/Users/romaindespoulain/Documents/L2/Semestre_3/INFO301_C/TP/TP_INFO0301
+BASE_DIR=/home/duckduckcodes/info/C301
 # Chemin vers les Logs
-LOG_DIR=/Users/romaindespoulain/Documents
+LOG_DIR=/home/duckduckcodes/info/C301
 # Type OS : UNIX, WIN
 OS=UNIX
 # Auteur du TP
-AUTHOR=Despoullains Romain
+AUTHOR=Duckduckcodes 
